--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "setup": "CI=true pnpm install --ignore-workspace && pnpm exec playwright install chromium",
-    "capture": "node capture-website-screenshots.mjs"
+    "capture": "node capture-website-screenshots.mjs",
+    "test": "node --test tests/capture-website-screenshots.test.mjs"
   },
   "devDependencies": {
     "playwright": "1.51.1"
